// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`backslash_2028.js 1`] = `
1;/*a*///b /*c*/2
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1; /*a*/ //b
/*c*/ 2;

`;

exports[`backslash_2029.js 1`] = `
1;/*a*///b /*c*/2
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1; /*a*/ //b
/*c*/ 2;

`;
